	- Changes Introduced In 0.1.3
	- Changes Introduced In 0.1.2
	- Changes Introduced In 0.1.1
    - Changes Introduced In 0.1.0

****************************************************
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\

**Changes introduced in 0.3.14
[Enhance]	Added support for point-to-multipoint connections to represent breakout cables
[Fix]		Broken template image upload

**Changes introduced in 0.3.13
[Fix]		Failure to import trunk data correctly on backup restore

**Changes introduced in 0.3.12
[Enhance]	When configuring template port ID, show last port ID in long abreviated list
[Enhance]	Cable path connections generated programatically instead of static images
[Enhance]	Added customer payment portal
[Fix]		Corrected nested insert size as displayed in "Available Templates" box
[Fix]		Template port ID add/remove field not refreshing when shown for different connectable partitions
[Fix]		Fresh install inserted data in a way that would cause a "duplicate cabinet order" error on backup restore

**Changes introduced in 0.3.11
[Enhance]	Added ability to create inserts with enclosure partitions
[Fix]		Validate trunked partitions are not connected to each other
[Fix]		Issue with connections being imported as "populated" when restoring from backup
[Fix]		Validate duplicate walljack port names when trunked to multiple partitions
[Fix]		Validate trunked endpoint is not connected
[Fix]		Issue with template rear image when importing from template catalog

**Changes introduced in 0.3.10
[Enhance]	Added "Bottom-Left to Top" port orientation

**Changes introduced in 0.3.9
[Enhance]	Added location/cabinet tree sorting options
[Enhance]	Clear backup file on upload
[Fix]		Prevent same name cabinets from sharing location

**Changes introduced in 0.3.8
[Enhance]	Added MPO-12, MPO-24, and QSFP port types

**Changes introduced in 0.3.7

[Feature]	Combined templates
[Fix]		Resolved inaccurate trunk path